# solpick-solar-roi-bidding-platform

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/static/: app.js  index.html  styles.css
data/: installers.csv  regional_solar_profile.csv  subsidy_rules.csv
docs/: limitations.md  model_logic.md  service_flow.md
scripts/: run_app.sh  test.sh
src/solpick/: __init__.py  data_loader.py  economics.py  recommender.py  schemas.py  solar_engine.py  subsidies.py
tests/: test_economics.py  test_recommender.py  test_solar_engine.py
